Avoid scrollbars at sitemap in link dialog

--- a/app/assets/stylesheets/alchemy/lists.scss
+++ b/app/assets/stylesheets/alchemy/lists.scss
@@ -11,10 +11,6 @@ ul.list {
     }
   }
 
-  &#sitemap {
-    padding: 0 0 104px 0;
-  }
-
   li {
     list-style-type: none;
     display: block;
